--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "yiisoft/yii2": ">=2.0.6",
     "yiisoft/yii2-bootstrap": "*",
     "yiisoft/yii2-swiftmailer": "*",
-    "apache/thrift": "^0.10.0"
+    "apache/thrift": "^0.10.0",
+    "yiisoft/yii2-redis": "^2.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "*",
