--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=5.4.0",
     "yidas/yii2-composer-bower-skip": ">=2.0.5",
     "yiisoft/yii2": ">=2.0.6",
-    "packaged/thrift": ">=0.10.0",
+    "packaged/thrift": "~0.10.0",
     "yiisoft/yii2-bootstrap": "*",
     "yiisoft/yii2-swiftmailer": "*",
     "yiisoft/yii2-redis": ">=2.0",
